--- a/files/en-us/learn/server-side/express_nodejs/development_environment/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/development_environment/index.html
@@ -98,7 +98,7 @@ tags:
 sudo apt-get install -y nodejs
 </pre>
 
-<div class="warning">
+<div class="notecard warning">
 <p><strong>Warning:</strong> Don't install directly from the normal Ubuntu repositories because they contain very old versions of node.</p>
 </div>
 
