--- a/files/en-us/learn/server-side/django/generic_views/index.html
+++ b/files/en-us/learn/server-side/django/generic_views/index.html
@@ -122,13 +122,14 @@ class BookListView(generic.ListView):
 
 <p>Create the HTML file <strong>/locallibrary/catalog/templates/catalog/book_list.html</strong> and copy in the text below. As discussed above, this is the default template file expected by the generic class-based list view (for a model named <code>Book</code> in an application named <code>catalog</code>).</p>
 
-<p>Templates for generic views are just like any other templates (although of course the context/information passed to the template may differ). As with our <em>index</em> template, we extend our base template in the first line and then replace the block named <code>content</code>.</p>
+<p>Templates for generic views are just like any other templates (although of course the context/information passed to the template may differ).
+As with our <em>index</em> template, we extend our base template in the first line and then replace the block named <code>content</code>.</p>
 
 <pre class="brush: html">{% extends "base_generic.html" %}
 
 {% block content %}
   &lt;h1&gt;Book List&lt;/h1&gt;
-  <strong>{% if book_list %}</strong>
+  {% if book_list %}
   &lt;ul&gt;
     {% for book in book_list %}
       &lt;li&gt;
@@ -136,32 +137,35 @@ class BookListView(generic.ListView):
       &lt;/li&gt;
     {% endfor %}
   &lt;/ul&gt;
-  <strong>{% else %}</strong>
+  {% else %}
     &lt;p&gt;There are no books in the library.&lt;/p&gt;
-  <strong>{% endif %} </strong>
+  {% endif %}
 {% endblock %}</pre>
 
 <p>The view passes the context (list of books) by default as <code>object_list</code> and <code>book_list</code> aliases; either will work.</p>
 
 <h4 id="Conditional_execution">Conditional execution</h4>
 
-<p>We use the <code><a href="https://docs.djangoproject.com/en/3.1/ref/templates/builtins/#if">if</a></code>, <code>else</code>, and <code>endif</code> template tags to check whether the <code>book_list</code> has been defined and is not empty. If <code>book_list</code> is empty, then the <code>else</code> clause displays text explaining that there are no books to list. If <code>book_list</code> is not empty, then we iterate through the list of books.</p>
+<p>We use the <code><a href="https://docs.djangoproject.com/en/3.1/ref/templates/builtins/#if">if</a></code>, <code>else</code>, and <code>endif</code> template tags to check whether the <code>book_list</code> has been defined and is not empty.
+If <code>book_list</code> is empty, then the <code>else</code> clause displays text explaining that there are no books to list.
+If <code>book_list</code> is not empty, then we iterate through the list of books.</p>
 
-<pre class="brush: html"><strong>{% if book_list %}</strong>
+<pre class="brush: html">{% if book_list %}
   &lt;!-- code here to list the books --&gt;
-<strong>{% else %}</strong>
+{% else %}
   &lt;p&gt;There are no books in the library.&lt;/p&gt;
-<strong>{% endif %}</strong>
+{% endif %}
 </pre>
 
 <p>The condition above only checks for one case, but you can test on additional conditions using the <code>elif</code> template tag (e.g. <code>{% elif var2 %}</code>). For more information about conditional operators see: <a href="https://docs.djangoproject.com/en/3.1/ref/templates/builtins/#if">if</a>, <a href="https://docs.djangoproject.com/en/3.1/ref/templates/builtins/#ifequal-and-ifnotequal">ifequal/ifnotequal</a>, and <a href="https://docs.djangoproject.com/en/3.1/ref/templates/builtins/#ifchanged">ifchanged</a> in <a href="https://docs.djangoproject.com/en/3.1/ref/templates/builtins">Built-in template tags and filters</a> (Django Docs).</p>
 
 <h4 id="For_loops">For loops</h4>
 
-<p>The template uses the <a href="https://docs.djangoproject.com/en/3.1/ref/templates/builtins/#for">for</a> and <code>endfor</code> template tags to loop through the book list, as shown below. Each iteration populates the <code>book</code> template variable with information for the current list item.</p>
+<p>The template uses the <a href="https://docs.djangoproject.com/en/3.1/ref/templates/builtins/#for">for</a> and <code>endfor</code> template tags to loop through the book list, as shown below.
+Each iteration populates the <code>book</code> template variable with information for the current list item.</p>
 
-<pre class="brush: html">{% for <strong>book</strong> in book_list %}
-  &lt;li&gt; &lt;!-- code here get information from each <strong>book</strong> item --&gt; &lt;/li&gt;
+<pre class="brush: html">{% for book in book_list %}
+  &lt;li&gt; &lt;!-- code here get information from each book item --&gt; &lt;/li&gt;
 {% endfor %}
 </pre>
 
@@ -187,7 +191,7 @@ class BookListView(generic.ListView):
 <p>Open the base template (<strong>/locallibrary/catalog/templates/<em>base_generic.html</em></strong>) and insert <strong>{% url 'books' %} </strong>into the URL link for <strong>All books</strong>, as shown below. This will enable the link in all pages (we can successfully put this in place now that we've created the "books" URL mapper).</p>
 
 <pre class="brush: python">&lt;li&gt;&lt;a href="{% url 'index' %}"&gt;Home&lt;/a&gt;&lt;/li&gt;
-<strong>&lt;li&gt;&lt;a href="{% url 'books' %}"&gt;All books&lt;/a&gt;&lt;/li&gt;</strong>
+&lt;li&gt;&lt;a href="{% url 'books' %}"&gt;All books&lt;/a&gt;&lt;/li&gt;
 &lt;li&gt;&lt;a href=""&gt;All authors&lt;/a&gt;&lt;/li&gt;</pre>
 
 <h3 id="What_does_it_look_like">What does it look like?</h3>
@@ -209,7 +213,9 @@ This <code>path()</code> function defines a pattern, associated generic class-ba
     path('book/&lt;int:pk&gt;', views.BookDetailView.as_view(), name='book-detail'),
 ]</pre>
 
-<p>For the <em>book-detail</em> path the URL pattern uses a special syntax to capture the specific id of the book that we want to see. The syntax is very simple: angle brackets define the part of the URL to be captured, enclosing the name of the variable that the view can use to access the captured data. For example, <strong>&lt;something&gt;</strong> , will capture the marked pattern and pass the value to the view as a variable "something". You can optionally precede the variable name with a <a href="https://docs.djangoproject.com/en/3.1/topics/http/urls/#path-converters">converter specification</a> that defines the type of data (int, str, slug, uuid, path).</p>
+<p>For the <em>book-detail</em> path the URL pattern uses a special syntax to capture the specific id of the book that we want to see.
+The syntax is very simple: angle brackets define the part of the URL to be captured, enclosing the name of the variable that the view can use to access the captured data.
+For example, <strong>&lt;something&gt;</strong> , will capture the marked pattern and pass the value to the view as a variable "something". You can optionally precede the variable name with a <a href="https://docs.djangoproject.com/en/3.1/topics/http/urls/#path-converters">converter specification</a> that defines the type of data (int, str, slug, uuid, path).</p>
 
 <p>In this case we use <code>'&lt;int:pk&gt;'</code> to capture the book id, which must be a specially formatted string and pass it to the view as a parameter named <code>pk</code> (short for primary key). This is the id that is being used to store the book uniquely in the database, as defined in the Book Model.</p>
 
@@ -218,7 +224,7 @@ This <code>path()</code> function defines a pattern, associated generic class-ba
 </div>
 
 <div class="notecard warning">
-  <p><strong>Warning</strong> The generic class-based detail view <em>expects</em> to be passed a parameter named <strong>pk</strong>. If you're writing your own function view you can use whatever parameter name you like, or indeed pass the information in an unnamed argument.</p>
+  <p><strong>Warning:</strong> The generic class-based detail view <em>expects</em> to be passed a parameter named <strong>pk</strong>. If you're writing your own function view you can use whatever parameter name you like, or indeed pass the information in an unnamed argument.</p>
 </div>
 
 <h4 id="Advanced_path_matchingregular_expression_primer">Advanced path matching/regular expression primer</h4>
@@ -496,7 +502,7 @@ def book_detail_view(request, primary_key):
 
 <p>At this point, we should have created everything needed to display both the book list and book detail pages. Run the server (<code>python3 manage.py runserver</code>) and open your browser to <a href="http://127.0.0.1:8000/">http://127.0.0.1:8000/</a>.</p>
 
-<div class="warning">
+<div class="notecard warning">
 <p><strong>Warning:</strong> Don't click any author or author detail links yet — you'll create those in the challenge!</p>
 </div>
 
@@ -516,13 +522,14 @@ def book_detail_view(request, primary_key):
 
 <h3 id="Views">Views</h3>
 
-<p>Open <strong>catalog/views.py</strong>, and add the <code>paginate_by</code> line shown in bold below.</p>
+<p>Open <strong>catalog/views.py</strong>, and add the <code>paginate_by</code> line shown below.</p>
 
 <pre class="brush: python">class BookListView(generic.ListView):
     model = Book
-    <strong>paginate_by = 10</strong></pre>
+    paginate_by = 10</pre>
 
-<p>With this addition, as soon as you have more than 10 records the view will start paginating the data it sends to the template. The different pages are accessed using GET parameters — to access page 2 you would use the URL <code>/catalog/books/<strong>?page=2</strong></code>.</p>
+<p>With this addition, as soon as you have more than 10 records the view will start paginating the data it sends to the template.
+The different pages are accessed using GET parameters — to access page 2 you would use the URL <code>/catalog/books/?page=2</code>.</p>
 
 <h3 id="Templates">Templates</h3>
 
@@ -580,9 +587,11 @@ def book_detail_view(request, primary_key):
 <div class="note notecard">
   <p><strong>Note:</strong></p>
   <ul>
-    <li>Once you've created the URL mapper for the author list page you will also need to update the <strong>All authors</strong> link in the base template. Follow the <a href="#update_the_base_template">same process</a> as we did when we updated the <strong>All books</strong> link.</li>
-    <li>Once you've created the URL mapper for the author detail page, you should also update the <a href="#creating_the_detail_view_template">book detail view template</a> (<strong>/locallibrary/catalog/templates/catalog/book_detail.html</strong>) so that the author link points to your new author detail page (rather than being an empty URL). The recommended way to do this is to call <code>get_absolute_url()</code> on the author model as shown below.
-      <pre class="brush: html">&lt;p&gt;&lt;strong&gt;Author:&lt;/strong&gt; &lt;a href="<strong>\{{ book.author.get_absolute_url }}</strong>"&gt;\{{ book.author }}&lt;/a&gt;&lt;/p&gt;
+    <li>Once you've created the URL mapper for the author list page you will also need to update the <strong>All authors</strong> link in the base template.
+    Follow the <a href="#update_the_base_template">same process</a> as we did when we updated the <strong>All books</strong> link.</li>
+    <li>Once you've created the URL mapper for the author detail page, you should also update the <a href="#creating_the_detail_view_template">book detail view template</a> (<strong>/locallibrary/catalog/templates/catalog/book_detail.html</strong>) so that the author link points to your new author detail page (rather than being an empty URL).
+    The recommended way to do this is to call <code>get_absolute_url()</code> on the author model as shown below.
+      <pre class="brush: html">&lt;p&gt;&lt;strong&gt;Author:&lt;/strong&gt; &lt;a href="\{{ book.author.get_absolute_url }}"&gt;\{{ book.author }}&lt;/a&gt;&lt;/p&gt;
     </pre>
     </li>
   </ul>
